--- a/crust-ui/package.json
+++ b/crust-ui/package.json
@@ -18,5 +18,8 @@
     "tslib": "^2.4.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
+  },
+  "dependencies": {
+    "@shopify/draggable": "1.0.0-beta.8"
   }
 }
