--- a/crust-ui/package.json
+++ b/crust-ui/package.json
@@ -20,6 +20,7 @@
     "vite": "^3.1.0"
   },
   "dependencies": {
-    "@shopify/draggable": "1.0.0-beta.8"
+    "@shopify/draggable": "1.0.0-beta.8",
+    "nanoid": "^4.0.0"
   }
 }
